--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-	</head>
-    <body style="margin:0px;padding:0px;">
-		<header style="background-color:#FF0000;height:70px;width:100%;">
-		</header>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Airbnb clone</title>
+  </head>
+  <body style="margin:0; padding:0;">
+    <header style="background-color: #FF0000; height: 70px; width: 100%">
+    </header>
+    <Footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0">
+      <p style="text-align: center; vertical-align: middle;">Best School</p>
+    </Footer>
+  </body>
+ </html>
 
-		<footer style="position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;">
-			<p>ALX School</p>
-		</footer>
-	</body>
-</html>
+<!-- Task 0 -->
+
