--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
+  <head>
+    <meta charset="UTF-8">
+    <title>Airbnb clone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles/2-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
+  </head>
+  <body>
+    <header>
+    </header>
+    <footer>
+      <p>Best School</p>
+    </footer>
+  </body>
+  </html>
 
-		<link rel="stylesheet" href="styles/2-common.css"/>
-		<link rel="stylesheet" href="styles/2-header.css"/>
-		<link rel="stylesheet" href="styles/2-footer.css"/>
-	</head>
-    <body>
-		<header>
-		</header>
-
-		<footer>
-			<p>ALX School</p>
-		</footer>
-	</body>
-</html>
+  <!-- Task 2 -->
