--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styles/3-common.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
+    <link rel="icon" href="images/icon.png"/>
+    <title>AirBnB clone</title>
+  </head>
+  <body>
+    <header>
+    </header>
+    <footer>
+      <p>Best School</p>
+    </footer>
+  </body>
+  </html>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
-
-		<link rel="stylesheet" href="styles/3-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-	</head>
-    <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-
-		<footer>
-			<p>ALX School</p>
-		</footer>
-	</body>
-</html>
+  <!-- Task 3 -->
